fix css for spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -74,6 +74,7 @@ nav a {
 .profile li {
   list-style: none;
   color: black;
+  padding: 2px;
 }
 
 .profile {
